--- a/my-standard-react-app/catalog-info.yaml
+++ b/my-standard-react-app/catalog-info.yaml
@@ -1,8 +1,8 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: ${{values.component_id | dump}}
-  description: ${{values.description | dump}}
+  name: my-custom-react-template-${{values.component_id | lower}}
+  description: Custom React Template - ${{values.description | dump}}
   annotations:
     github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
     backstage.io/techdocs-ref: dir:.
@@ -10,3 +10,4 @@ spec:
   type: website
   lifecycle: experimental
   owner: ${{values.owner | dump}}
+
