Updated a couple yaml files

--- a/my-standard-react-app/catalog-info.yaml
+++ b/my-standard-react-app/catalog-info.yaml
@@ -2,7 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: my-custom-react-template
-  description: ${{values.description | dump}}
+  description: A custom React Template to show the power of Backstage
   annotations:
     github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
     backstage.io/techdocs-ref: dir:.
