--- a/template.yaml
+++ b/template.yaml
@@ -45,38 +45,56 @@ spec:
           ui:options:
             allowedHosts:
               - github.com
-  steps:
-    - id: template
-      name: Fetch Skeleton + Template
-      action: fetch:template
-      input:
-        url: https://github.com/IDPArchitect/custom-react-template
-        copyWithoutRender:
-          - .github/workflows/*
-        values:
-          component_id: ${{ parameters.component_id }}
-          description: ${{ parameters.description }}
-          destination: ${{ parameters.repoUrl | parseRepoUrl }}
-          owner: ${{ parameters.owner }}
-    - id: publish
-      name: Publish
-      action: publish:github
-      input:
-        allowedHosts: ['github.com']
-        description: This is ${{ parameters.component_id }}
-        repoUrl: ${{ parameters.repoUrl }}
-    - id: register
-      name: Register
-      action: catalog:register
-      input:
-        repoContentsUrl: ${{ steps.publish.output.repoContentsUrl }}
-        catalogInfoPath: "/catalog-info.yaml"
-  output:
-    links:
-      - title: Repository
-        url: ${{ steps.publish.output.remoteUrl }}
-      - title: Open in catalog
-        icon: catalog
-        entityRef: ${{ steps.register.output.entityRef }}
+steps:
+  - id: debug
+    name: Debug Values
+    action: debug:log
+    input:
+      message: |
+        Raw repoUrl: ${{ parameters.repoUrl }}
+        Parsed repoUrl: ${{ parameters.repoUrl | parseRepoUrl | dump }}
+        Component ID: ${{ parameters.component_id }}
+        Owner: ${{ parameters.owner }}
+
+  - id: template
+    name: Fetch Skeleton + Template
+    action: fetch:template
+    input:
+      url: https://github.com/IDPArchitect/custom-react-template
+      targetPath: ./
+      copyWithoutRender:
+        - .github/workflows/*
+      values:
+        component_id: ${{ parameters.component_id }}
+        description: ${{ parameters.description }}
+        destination: ${{ parameters.repoUrl | parseRepoUrl }}
+        owner: ${{ parameters.owner }}
+
+  - id: publish
+    name: Publish
+    action: publish:github
+    input:
+      allowedHosts: ['github.com']
+      description: This is ${{ parameters.component_id }}
+      repoUrl: ${{ parameters.repoUrl }}
+      token: ${GITHUB_TOKEN}
+    if:
+      not:
+        ${{ parameters.dryRun }}
+
+  - id: register
+    name: Register
+    action: catalog:register
+    input:
+      repoContentsUrl: ${{ steps.publish.output.repoContentsUrl }}
+      catalogInfoPath: "/catalog-info.yaml"
+
+output:
+  links:
+    - title: Repository
+      url: ${{ steps.publish.output.remoteUrl }}
+    - title: Open in catalog
+      icon: catalog
+      entityRef: ${{ steps.register.output.entityRef }}
 
 
