--- a/template.yaml
+++ b/template.yaml
@@ -49,7 +49,7 @@ spec:
       name: Fetch Skeleton + Template
       action: fetch:template
       input:
-        url: ./skeleton
+        url: "https://github.com/IDPArchitect/custom-react-template"
         copyWithoutRender:
           - .github/workflows/*
         values:
