--- a/template.yaml
+++ b/template.yaml
@@ -49,7 +49,7 @@ spec:
       name: Fetch Skeleton + Template
       action: fetch:template
       input:
-        url: "https://github.com/IDPArchitect/custom-react-template"
+        url: "https://github.com/IDPArchitect/custom-react-template/blob/main/template.yaml"
         copyWithoutTemplating:
           - .github/workflows/*
         values:
